# dash_Inventario

./: README.md  pyproject.toml  requirements.txt  streamlit.py  streamlit_app.py  style.css  tb_to_csv.py
.streamlit/: config.toml
data/: acuracidade.csv
