[project]
name = "dashinventory"
version = "0.1.0"
description = ""
authors = [
    {name = "paulocardoso"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.42.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plost (>=0.2.5,<0.3.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "mpld3 (>=0.5.10,<0.6.0)",
    "altair (>=5.5.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
